# updatechecker

./: .gitignore  .terraform.lock.hcl  LICENSE  README.md  README.rst  backend.tf  env.tfvars  lambda-assume-role.json  lambda-role-policy.json  lambda.tf  package_lambda.py  public-read.json  setup.cfg  setup.py  sns.tf  variables.tf
docs/source/: checkers.rst  conf.py  index.rst  modules.rst  updatechecker.checkers.rst  updatechecker.rst
updatechecker/: .gitignore  __main__.py  checker.py  lambda.py  main.py
updatechecker/checkers/: __init__.py  eclipse_java.py  finch_py.py  jgrasp.py  vbox_guest.py
