[metadata]
name = updatechecker
version = attr: updatechecker.VERSION
author = Kyle Laker
author_email = kyle@laker.email
url = https://github.com/kylelaker/updatechecker
description = Checks for updates of some software
long_description = file: README.rst
license = MIT

[options]
packages = updatechecker
install_requires =
    requests
    beautifulsoup4

